# DNESP32S3-Development-Board

./: clean_all_idf_projects.bat  readme.txt
00_basic/: CMakeLists.txt  README.md
00_basic/main/: main.c
01-FreeRTOS-examples/01_Trends_task_creation_and_deletion/: CMakeLists.txt
01-FreeRTOS-examples/04_Insertion_and_deletion_list_items/: README.md
01-FreeRTOS-examples/09_Binary_semaphore_operation/: CMakeLists.txt
01-FreeRTOS-examples/10_Counting_type_semaphore_operation/: README.md
01_led/: CMakeLists.txt  README.md
01_led/main/: main.c
02-WiFi-examples/09_WiFi_CAMERA/: README.md
02_key/: CMakeLists.txt  README.md
02_key/main/: main.c
03_exit/: CMakeLists.txt  README.md
03_exit/main/: main.c
04_uart/: CMakeLists.txt  README.md
04_uart/main/: main.c
05_esptimer/: CMakeLists.txt  README.md
05_esptimer/main/: main.c
06_1_timg/: CMakeLists.txt  README.md
06_1_timg/main/: main.c
06_2_timg/: CMakeLists.txt
06_2_timg/main/: main.c
07_ledc/: CMakeLists.txt  README.md
07_ledc/main/: main.c
09_iic_exio/: CMakeLists.txt  README.md
09_iic_exio/main/: main.c
10_spilcd/: CMakeLists.txt
10_spilcd/main/: main.c
11_iic_eeprom/: CMakeLists.txt  README.md  partitions-16MiB.csv
11_iic_eeprom/main/: main.c
13_rtc/: CMakeLists.txt  README.md
13_rtc/main/: main.c
14_adc/: CMakeLists.txt  README.md
14_adc/components/BSP/: CMakeLists.txt
14_adc/main/: main.c
15_ap3216c/: CMakeLists.txt  README.md
15_ap3216c/main/: main.c
16_infrared_reception/: CMakeLists.txt  README.md
16_infrared_reception/main/: main.c
17_infrared_transmission/: CMakeLists.txt  README.md
17_infrared_transmission/main/: main.c
18_tsens/: README.md
18_tsens/main/: main.c
19_ds18b20/: CMakeLists.txt  README.md
19_ds18b20/main/: main.c
20_dht11/: CMakeLists.txt  README.md
20_dht11/main/: main.c
21_rng/: CMakeLists.txt  README.md  sdkconfig
21_rng/main/: main.c
22_qma6100p/: CMakeLists.txt  README.md
22_qma6100p/main/: main.c
23_rgb/: CMakeLists.txt  README.md
23_rgb/main/: main.c
24_touch/: CMakeLists.txt  README.md
24_touch/main/: main.c
25_1_camera/: README.md
25_1_camera/main/: main.c
25_2_camera_photograph/: CMakeLists.txt  sdkconfig.old
25_2_camera_photograph/main/: main.c
25_sd/: CMakeLists.txt  README.md
25_sd/main/: main.c
27_spiffs/: CMakeLists.txt  README.md
27_spiffs/components/BSP/: CMakeLists.txt
27_spiffs/components/BSP/SPIFFS/: my_spiffs.c
27_spiffs/main/: main.c
28_chinese_display/: CMakeLists.txt  README.md  sdkconfig
28_chinese_display/components/BSP/: CMakeLists.txt
28_chinese_display/main/: main.c
29_pitures/: CMakeLists.txt  README.md  sdkconfig.old
29_pitures/main/: main.c
30_music/: CMakeLists.txt
30_music/main/: main.c
31_recoding/: CMakeLists.txt  README.md
31_recoding/main/: CMakeLists.txt  main.c
32_videoplayer/: CMakeLists.txt  README.md
32_videoplayer/main/: CMakeLists.txt  main.c
33_usb_uart/: CMakeLists.txt  README.md
33_usb_uart/main/: CMakeLists.txt  main.c
34_usb_flash_u/: CMakeLists.txt  README.md
35_usb_sd_u/: CMakeLists.txt  README.md
36_usb_camera/: CMakeLists.txt  README.md
Schematic Diagram/: Thumbs.db
Schematic Diagram/Standard Routine/13_rtc/components/BSP/: CMakeLists.txt
Schematic Diagram/Standard Routine/13_rtc/components/BSP/RTC/: esp_rtc.c  esp_rtc.h
Schematic Diagram/Standard Routine/29_pitures/components/Middlewares/PICTURE/: CMakeLists.txt  bmp.c  bmp.h  gif.c  jpeg.h  png.h
Standard Routine/: 文件目录表绘制.cmd
Standard Routine/32_videoplayer/components/BSP/: CMakeLists.txt
Standard Routine/32_videoplayer/components/BSP/MYI2S/: myi2s.h
(+399 files in other folders)
